# robotz-cli

./: botz.ps1  pyproject.toml
robotz_cli/: __init__.py  __main__.py
